add api worker
