# app/models/akun.js
@@ -21,8 +21,12 @@ module.exports = (sequelize, DataTypes) => {
       phone_number: DataTypes.STRING,
       gmail: DataTypes.STRING,
       name: DataTypes.STRING,
+      regency: DataTypes.STRING,
+      province: DataTypes.STRING,
+      city: DataTypes.STRING,
       address: DataTypes.STRING,
       gender: DataTypes.STRING,
+      job_category: DataTypes.STRING,
       place_date_of_birth: DataTypes.STRING,
       nationality: DataTypes.STRING,
       personal_summary: DataTypes.TEXT,
